--- a/DiandianIOS/DiandianIOS/DiandianIOS-Info.plist
+++ b/DiandianIOS/DiandianIOS/DiandianIOS-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ServerPort</key>
+	<string>3000</string>
+	<key>ServerAddress</key>
+	<string>10.2.3.201</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>CFBundleDevelopmentRegion</key>
