--- a/DiandianIOS/DiandianIOS/Settings.bundle/Root.plist
+++ b/DiandianIOS/DiandianIOS/Settings.bundle/Root.plist
@@ -22,6 +22,22 @@
 			<key>Key</key>
 			<string>diandian_version</string>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>设定</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>打印机必须</string>
+			<key>Key</key>
+			<string>com.diandain.printer.master</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
