打印机加锁功能iPad端对应

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ cer/Profile_DiandianIOS.mobileprovision
 cer/iOS_Team_Provisioning_Profile_jpcodreamartsDiandianIOS.mobileprovision
 cer/ios_distribution.cer
 cer/证书.cer
+.idea
