--- a/DiandianIOS/DiandianIOS/DiandianIOS-Info.plist
+++ b/DiandianIOS/DiandianIOS/DiandianIOS-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>jp.co.dreamarts.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>cn.alphabets.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
